@@ -6,7 +6,7 @@
  *  based on BOOM, a modified and improved DOOM engine
  *  Copyright (C) 1999 by
  *  id Software, Chi Hoang, Lee Killough, Jim Flynn, Rand Phares, Ty Halderman
- *  Copyright (C) 1999-2000 by
+ *  Copyright (C) 1999-2006 by
  *  Jess Haas, Nicolas Kalkhof, Colin Phipps, Florian Schulze
  *
  *  This program is free software; you can redistribute it and/or
@@ -491,14 +491,24 @@ floater:
      *  caused it not to sync Doom 2 v1.9 demos. Someone
      *  added the above comment and moved up the following code. So
      *  demos would desync in close lost soul fights.
-     * Note that this only applies to original Doom 1 or Doom2 demos -
-     *  Final Doom and Ultimate Doom.  So we test demo_compatibility *and*
-     *  gamemission. (Note we assume that Doom1 is always Ult Doom, which
-     *  seems to hold for most published demos.)
+     * cph - revised 2001/04/15 -
+     * This was a bug in the Doom/Doom 2 source; the following code
+     *  is meant to make charging lost souls bounce off of floors, but it 
+     *  was incorrectly placed after momz was set to 0.
+     *  However, this bug was fixed in Doom95, Final/Ultimate Doom, and 
+     *  the v1.10 source release (which is one reason why it failed to sync 
+     *  some Doom2 v1.9 demos)
+     * I've added a comp_soul compatibility option to make this behavior 
+     *  selectable for PrBoom v2.3+. For older demos, we do this here only 
+     *  if we're in a compatibility level above Doom 2 v1.9 (in which case we
+     *  mimic the bug and do it further down instead)
      */
-    int correct_lost_soul_bounce = !demo_compatibility || (gamemission != doom2);
 
-    if (correct_lost_soul_bounce && mo->flags & MF_SKULLFLY)
+    if (mo->flags & MF_SKULLFLY &&
+	(!comp[comp_soul] ||
+	 (compatibility_level > doom2_19_compatibility &&
+	  compatibility_level < prboom_4_compatibility)
+	))
       mo->momz = -mo->momz; // the skull slammed into something
 
     if (mo->momz < 0)
@@ -523,12 +533,14 @@ floater:
       }
     mo->z = mo->floorz;
 
-    /* cph 2001/05/26 -
-     * See lost soul bouncing comment above. We need this here for bug
-     * compatibility with original Doom2 v1.9 - if a soul is charging and
-     * hit by a raising floor this incorrectly reverses its Y momentum.
+    /* cph 2001/04/15 - 
+     * This is the buggy lost-soul bouncing code referenced above.
+     * We've already set momz = 0 normally by this point, so it's useless.
+     * However we might still have upward momentum, in which case this will
+     * incorrectly reverse it, so we might still need this for demo sync
      */
-    if (!correct_lost_soul_bounce && mo->flags & MF_SKULLFLY)
+    if (mo->flags & MF_SKULLFLY &&
+	compatibility_level <= doom2_19_compatibility)
       mo->momz = -mo->momz; // the skull slammed into something
 
     if ( (mo->flags & MF_MISSILE) && !(mo->flags & MF_NOCLIP) )
@@ -547,6 +559,12 @@ floater:
 
   if (mo->z + mo->height > mo->ceilingz)
     {
+    /* cph 2001/04/15 - 
+     * Lost souls were meant to bounce off of ceilings;
+     *  new comp_soul compatibility option added
+     */
+    if (!comp[comp_soul] && mo->flags & MF_SKULLFLY)
+      mo->momz = -mo->momz; // the skull slammed into something
 
     // hit the ceiling
 
@@ -555,7 +573,12 @@ floater:
 
     mo->z = mo->ceilingz - mo->height;
 
-    if (mo->flags & MF_SKULLFLY)
+    /* cph 2001/04/15 - 
+     * We might have hit a ceiling but had downward momentum (e.g. ceiling is 
+     *  lowering on us), so for old demos we must still do the buggy 
+     *  momentum reversal here
+     */
+    if (comp[comp_soul] && mo->flags & MF_SKULLFLY)
       mo->momz = -mo->momz; // the skull slammed into something
 
     if ( (mo->flags & MF_MISSILE) && !(mo->flags & MF_NOCLIP) )
